# polymarket-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  release-plz.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release-plz.yml  release.yml
adr/: 001-baseline.md  002-fix-training-inconsistencies.md  003-fresh-data-fetch.md  004-online-learning.md  005-feature-improvements.md  006-remove-dead-features.md  007-portfolio-correlation-check.md  008-workspace-split.md  009-profitability-overhaul.md  010-remove-dataset-scripts.md  README.md
analysis/: performance_queries.sql
common/: Cargo.toml
common/src/: format.rs  lib.rs  metrics.rs  signal.rs
common/src/data/: models.rs
common/src/model/: features.rs
common/src/storage/: copy_trade.rs  portfolio.rs  postgres.rs
copy-trading-bot/: Cargo.toml  Dockerfile
copy-trading-bot/src/: config.rs  live.rs  main.rs
copy-trading-bot/src/cycles/: copy_trade.rs  housekeeping.rs  mod.rs
copy-trading-bot/src/scanner/: copy_trader.rs  mod.rs
copy-trading-bot/src/telegram/: commands.rs  mod.rs
deploy/: retrain-cron.sh  setup-server.sh
docs/: xgboost-plan.md
migrations/: 001_init.sql  002_calibration.sql  003_strategies.sql  004_rejected_signals.sql  005_telegram_users.sql  006_reset_bankroll.sql  007_reset_v2.sql  008_prediction_log.sql  009_bet_source.sql  010_fix_global_bankroll.sql  011_fix_starting_bankroll.sql  012_bet_url.sql  013_composite_indexes.sql  014_event_slug.sql  015_copy_trading.sql  016_bet_features.sql  017_bet_features.sql  017_topup_1000.sql  018_correlation_blocked.sql  019_copy_ref.sql  020_bet_category.sql
monitoring/grafana/dashboards/: application.json  process-tokio.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: Dockerfile  analyze_new_features.py  backfill_event_slugs.py  backtest.py  check_dataset.py  fetch_data.py  requirements.txt  retrain.sh  serve_model.py  test_predictions.py  train_from_dataset.py  train_model.py
src/: backtest_runner.rs  bayesian.rs  calibration.rs  config.rs  format.rs  live.rs  main.rs  metrics.rs  strategy.rs
src/agent/: estimator.rs  mod.rs  rig_agent.rs  tools.rs
src/backtest/: engine.rs  metrics.rs  mod.rs  portfolio.rs
src/cycles/: alerts.rs  bet_scan.rs  copy_trade.rs  heartbeat.rs  housekeeping.rs  mod.rs  news.rs
src/data/: crawler.rs  models.rs
src/execution/: mod.rs  polymarket.rs  wallet.rs
src/markets/: fetcher.rs  models.rs
src/model/: features.rs  mod.rs  sidecar.rs  xgb.rs
src/pricing/: kelly.rs  mod.rs  probability.rs
src/risk/: limits.rs  mod.rs
src/scanner/: copy_trader.rs  live.rs  mod.rs  news.rs  ws.rs
src/storage/: copy_trade.rs  db.rs  mod.rs  portfolio.rs  postgres.rs
src/strategies/: arbitrage.rs  mispricing.rs  mod.rs  signal.rs  value.rs
src/telegram/: commands.rs  notifier.rs
trading-bot/: Cargo.toml  Dockerfile  build.rs
trading-bot/src/: bayesian.rs  config.rs  live.rs  main.rs  strategy.rs
trading-bot/src/backtest/: portfolio.rs
trading-bot/src/cycles/: alerts.rs  bet_scan.rs  heartbeat.rs  housekeeping.rs  mod.rs
trading-bot/src/model/: mod.rs
trading-bot/src/scanner/: live.rs  mod.rs
trading-bot/src/telegram/: commands.rs
