[package]
name = "polymarket-bot"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/skharchikov/polymarket-bot"
license = "MIT"

[dependencies]
# LLM framework
rig-core = { version = "0.32", features = ["derive"] }

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/time
chrono = { version = "0.4.44", features = ["serde"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "json",
] }

# Environment variables
dotenvy = "0.15"

# Configuration
confique = "0.2"

# Allocator (musl's malloc is slow)
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
strip = true
lto = "thin"
