[package]
name = "polymarket-bot"
version = "0.5.27"
edition = "2024"
repository = "https://github.com/skharchikov/polymarket-bot"
license = "MIT"

[dependencies]
# LLM framework
rig-core = { version = "0.32", features = ["derive"] }

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/time
chrono = { version = "0.4.44", features = ["serde"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "json",
  "migrate",
] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# TLS (explicit crypto provider selection — both ring and aws-lc-rs in dep tree)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"

# Environment variables
dotenvy = "0.15"

# Configuration
confique = "0.2"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }
metrics-process = "2.3"

# Tokio runtime metrics
tokio-metrics = "0.4"

# Allocator (musl's malloc is slow)
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
strip = true
lto = "thin"
