[package]
name = "polymarket-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
anyhow = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate"] }
dotenvy = "0.15"
confique = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", features = ["http-listener"] }
metrics-process = "2.3"
tokio-metrics = "0.4"
futures-util = "0.3"
